# LifedebugENV

./: .dockerignore  Dockerfile  README.md  inference.py  metadata.json  openenv.yaml  package-lock.json  package.json  pyproject.toml  server.ts
scripts/: validate-submission.sh
server/: __init__.py  app.py
src/: App.tsx
src/services/: api.ts
