[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lifedebugenv"
version = "1.0.0"
description = "A lifestyle diagnostic RL environment for identifying root causes of symptoms from lifestyle logs."
authors = [
    { name = "Anant Sharma", email = "anantsharrma@gmail.com" }
]
dependencies = [
    "requests",
    "openai",
]
requires-python = ">=3.9"

[tool.setuptools]
py-modules = ["inference"]
