[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lifedebugenv"
version = "1.0.0"
description = "A lifestyle diagnostic RL environment for identifying root causes of symptoms from lifestyle logs."
authors = [
    { name = "Anant Sharma", email = "anantsharrma@gmail.com" }
]
dependencies = [
    "requests",
    "openai",
    "openenv-core>=0.2.0",
]
requires-python = ">=3.9"

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]
py-modules = ["inference"]
